globus-dsi-rest (0.32-1+gt6.@distro@) @distro@; urgency=low

  * More test script fixes to use a CA certificate

 -- Globus Toolkit <support@globus.org>  Fri, 19 May 2017 14:16:14 -0400

globus-dsi-rest (0.31-1+gt6.@distro@) @distro@; urgency=low

  * Fix test script to work with OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Thu, 18 May 2017 15:00:33 -0400

globus-dsi-rest (0.30-1+gt6.@distro@) @distro@; urgency=low

  * Fix memory buffer misuse

 -- Globus Toolkit <support@globus.org>  Mon, 17 Apr 2017 09:47:21 -0400

globus-dsi-rest (0.29-1+gt6.@distro@) @distro@; urgency=low

  * Thu Apr 13 2017 Globus Toolkit <support@globus.org> - 0.29-1
  * Add multiple-block data writer
  * Fix documentation typos

 -- Globus Toolkit <support@globus.org>  Thu, 13 Apr 2017 11:06:25 -0400

globus-dsi-rest (0.28-1+gt6.@distro@) @distro@; urgency=low

  * Add multipart reader
  * Increase JSON parser error string verbosity to help debug
    API calls that sometimes return non-JSON in an error situation

 -- Globus Toolkit <support@globus.org>  Wed, 29 Mar 2017 16:29:15 -0400

globus-dsi-rest (0.27-1+gt6.@distro@) @distro@; urgency=low

  * Fix hang when writing a 0 byte range.

 -- Globus Toolkit <support@globus.org>  Wed, 22 Mar 2017 13:34:37 -0400

globus-dsi-rest (0.26-1+gt6.@distro@) @distro@; urgency=low

  * Don't send an empty buffer at end of file in read_gridft_op

 -- Globus Toolkit <support@globus.org>  Fri, 17 Mar 2017 16:27:42 -0400

globus-dsi-rest (0.25-1+gt6.@distro@) @distro@; urgency=low

  * Use gridftp server recommended number of outstanding buffers
  * Fix format of json log messsage
  * Don't run gridftp server fork tests as root

 -- Globus Toolkit <support@globus.org>  Mon, 13 Mar 2017 13:05:40 -0400

globus-dsi-rest (0.23-1+gt6.@distro@) @distro@; urgency=low

  * Allow NULL key or value in URI parameters

 -- Globus Toolkit <support@globus.org>  Wed, 11 Jan 2017 15:31:33 -0500

globus-dsi-rest (0.22-1+gt6.@distro@) @distro@; urgency=low
