@@ -1,3 +1,9 @@
+globus-dsi-rest (0.33-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix leak when using gridftp_ops
+
+ -- Globus Toolkit <support@globus.org>  Fri, 14 Jul 2017 16:33:43 -0400
+
 globus-dsi-rest (0.32-1+gt6.@distro@) @distro@; urgency=low
 
   * More test script fixes to use a CA certificate
